--- a/paskaitos/2022-05-02/express-handlebars/templates/loop.handlebars
+++ b/paskaitos/2022-05-02/express-handlebars/templates/loop.handlebars
@@ -35,3 +35,11 @@
 
 {{!-- Duomenu paemimas is objekto --}}
 {{objektas.tipas}}
+
+<div class="test">{{objektas.tipas}}</div>
+
+<style>
+    .test {
+        background: red
+    }
+</style>
